welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:4: error: not found: value Direction
    case Direction.EAST =>
         ^DwarfCode:7: error: not found: value Direction
        setDirection(Direction.WEST)
                     ^DwarfCode:12: error: not found: value Direction
    case Direction.WEST =>
         ^DwarfCode:15: error: not found: value Direction
				setDirection(Direction.EAST)
                                             ^